<resources>
  <string name="app_name">Meus Clientes</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Cliente</string>
  <string name="nav_header_subtitle">Profº Marco Maddo</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Sair</string>

  <string name="modelo_fragment">Cliente VIP DEMO</string>

  <!-- Opções do Menu Lateral Drawer -->
  <string name="fragmento_adicionar_cliente">Adicionar Cliente</string>
  <string name="fragmento_adicionar_cliente_cards">Adicionar Cliente (Cards)</string>
  <string name="fragmento_listar_clientes">Listar Clientes</string>
  <string name="fragmento_listar_clientes_cards">Listar Clientes (Cards)</string>

  <string name="fragmento_preto">Fragmento Preto</string>
  <string name="titulo_preto">Preto</string>
  <string name="fragmento_vermelho">Fragmento Vermelho</string>

  <string name="titulo_vermelho">Vermelho</string>
  <string name="fragmento_azul">Fragmento Azul</string>
  <string name="titulo_azul">Azul</string>

  <!-- Opções do Menu Principal -->
  <string name="meu_perfil">Meu Perfil</string>
  <string name="adicionar_novo_cliente">Adicionar Novo Cliente</string>

  <!-- Textos para o Layout Adicionar Novo Cliente -->
  <string name="novoCliente">Adicionar Novo Cliente</string>
  <string name="txtPerfilContato">Perfil e Contato</string>
  <string name="txtEndereco">Endereço</string>
  <string name="pesquisar_por_nome">Pesquisar por nome</string>
</resources>
