<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_listar_cliente"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/fragmento_listar_clientes" />

        <item android:id="@+id/nav_listar_cliente_card"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/fragmento_listar_clientes_cards" />

        <item android:id="@+id/nav_adicionar_cliente"
            android:icon="@drawable/ic_item_menu_padrao"
            android:title="@string/fragmento_adicionar_cliente" />

<!--        <item android:id="@+id/nav_preto"-->
<!--            android:icon="@drawable/ic_item_menu_padrao"-->
<!--            android:title="@string/fragmento_preto" />-->


    </group>

</menu>
